src/objects/ACM_Entitlement_Settings__c.object
<CustomObject>
    <fields>
        <fullName>ACM_Duration_Unit__c</fullName>
        <label>Complimentary Maintenance Duration Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACM_Duration__c</fullName>
        <label>Complimentary Maintenance Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACM_KM_Limit__c</fullName>
        <label>Complimentary Maintenance KM Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deactivate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_Symbols__c</fullName>
        <label>Main Symbols</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>ACM Entitlements Settings</relationshipLabel>
        <relationshipName>ACM_Entitlements_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Symbols__c</fullName>
        <label>Sub Symbols</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>ACM Entitlement Settings</label>
    <nameField>
        <label>ACM Entitlement Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACM Entitlements Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>